--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "extends": "./tsconfig-base.json",
   "compilerOptions": {
-    "module": "esnext",
+    "module": "ES6",
     "outDir": "lib/ems",
-    "target": "esnext"
+    "target": "ES6"
   }
 }
