--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig-base.json",
   "compilerOptions": {
     "module": "ES6",
-    "outDir": "lib/ems",
+    "outDir": "lib/esm",
     "target": "ES6"
   }
 }
